@@ -8784,12 +8784,21 @@ GMT_LONG GMT_init_custom_symbol (struct GMT_CTRL *C, char *name, struct GMT_CUST
 			char flags[GMT_TEXT_LEN64];
 			nc = sscanf (&buffer[2], "%" GMT_LL "d %s", &head->n_required, flags);
 			head->type = GMT_memory (C, NULL, head->n_required, GMT_LONG);
-			for (k = 0; k < head->n_required; k++) {
-				switch (flags[k]) {
-					case 'a':	head->type[k] = GMT_IS_GEOANGLE; break;		/* Angle that needs to be converted via the map projection */
-					case 'l':	head->type[k] = GMT_IS_DIMENSION; break;	/* Length that will be in the current measure unit */
-					case 'o':	head->type[k] = GMT_IS_FLOAT; break;		/* Other, i.e, non-dimensional quantity not to be changed */
+			if (nc == 2) {	/* Got optional types argument */
+				if (strlen (flags) != head->n_required) {
+					GMT_report (C, GMT_MSG_FATAL, "Error: Custom symbol %s has inconsistent N: <npar> [<types>] declaration\n", name);
+					GMT_exit (EXIT_FAILURE);
 				}
+				for (k = 0; k < head->n_required; k++) {	/* Determine the argument types */
+					switch (flags[k]) {
+						case 'a':	head->type[k] = GMT_IS_GEOANGLE; break;		/* Angle that needs to be converted via the map projection */
+						case 'l':	head->type[k] = GMT_IS_DIMENSION; break;	/* Length that will be in the current measure unit */
+						case 'o':	head->type[k] = GMT_IS_FLOAT; break;		/* Other, i.e, non-dimensional quantity not to be changed */
+					}
+				}
+			}
+			else {
+				for (k = 0; k < head->n_required; k++) head->type[k] = GMT_IS_DIMENSION;	/* Default is lenghts */
 			}
 			continue;
 		}
@@ -8993,11 +9002,6 @@ GMT_LONG GMT_init_custom_symbol (struct GMT_CTRL *C, char *name, struct GMT_CUST
 		previous = s;
 	}
 	fclose (fp);
-	if (head->n_required == 0) {	/* No N: statement, default to N: 1 l */
-		head->n_required = 1;
-		head->type = GMT_memory (C, NULL, head->n_required, GMT_LONG);
-		head->type[0] = GMT_IS_DIMENSION;
-	}
 	
 	*S = head;
 	return (GMT_NOERROR);
