@@ -7,11 +7,17 @@
 header "Test psxy with multi-parameter custom symbol"
 
 ps=barb.ps
-
-pscoast -JM6i -R110/160/-45/-10 -Gwheat -Sazure1 -Wthin,black -B:."Wind barb symbol": -Bf10a30/f10a30WSen -K -P > $ps
-psxy -J -R -Wthinnest,black -Gblack -L -Skwindbarb/1.5i -O << EOF >> $ps
+cat << EOF > tmp
 150	-40	25	9.0
 150	-30	50	90.0
 EOF
 
+# Mercator
+pscoast -JM5i -R110/165/-45/-10 -Gwheat -Sazure1 -Wthin,black -BafgWSen -K -P -Xc > $ps
+psxy -J -R -W1p,black -Gblack -L -Skwindbarb/1.5i -O -K tmp >> $ps
+# Stereographic
+pscoast -JS120/-90/5i -R -Gwheat -Sazure1 -Wthin,black -BafgWSen -O -K -Y5i >> $ps
+psxy -J -R -W2p,red -Gblack -L -Skwindbarb/1.5i -O tmp >> $ps
+
+rm -f tmp
 pscmp
